# healpixmirror

./: Bugs.txt  INSTALL  Makefile.in  README  READ_Copyrights_Licenses.txt  Version  configure  getit  hand_editions.sh  healpix_doc  hpxconfig_functions.sh  pack
data/: README  weight_pixel_n00016.fits  weight_pixel_n00032.fits  weight_pixel_n00064.fits  weight_pixel_n00128.fits  weight_pixel_n00256.fits  weight_pixel_n00512.fits
doc/: HISTORY.txt  Healpix.txt  README
doc/TeX/: Makefile  README.txt  add_card.tex  add_dipole.tex  alm2cl.tex  alm2fits_idl.tex  alm2map.tex  alm2map_der.tex  alm2map_spin.tex  alm_i2t_idl.tex  alm_t2i_idl.tex  alms2fits.tex  alter_alm.tex  alteralm.tex  alteralm_fac.tex  anafast.tex  anafast_fac.tex  ang2vec.tex  ang2vec_c.tex  ang2vec_idl.tex  angdist.tex  angulardistance_idl.tex  apply_mask.tex  assert.tex  azeqview_idl.tex  beam2bl_idl.tex  bin_llcl_idl.tex  bl2beam_idl.tex  bl2fits_idl.tex  brag_openmp.tex  cartcursor_idl.tex  cartview_idl.tex  change_polcconv_idl.tex  cl2fits_idl.tex  common.css  complex_fft.tex  compute_statistics.tex  concatnl.tex  convert_inplace.tex  convert_nest2ring.tex  (+232 more)
doc/TeX/fig/: dir_tree.fig  facilities_diagram.fig  facilities_diagram.xfig  illustrate_colormap.pro  merge_reftqu.tex  merge_visu.tex  merge_visu_large.tex  merge_wmapKband.tex  moll_customize.pro  new_dir_tree_381.tex  new_dir_tree_382.tex  new_dir_tree_383.tex  qr_README  reftqu.pro  reftqu2.pro  showcase_planck_colors.pro
doc/TeX/screenshots/: README
doc/www/: README
doc/www/ancillary/: README  banner1.pro  banner2.pro  fake_html.sh  vignette2.sh  vignette3.sh
doc/www/cgi-bin/: register.cgi
doc/www/htdocs/: DOThtaccess  _analytics_tracking.php  _footer.inc.php  _gtag.php  _header.inc.php  _news.inc.php  credits.html  credits.php  documentation.html  documentation.php  downloads.html  downloads.php  gallery.html  gallery.php  index.html  index.php  mysync.sh  notfound.html  resources.html  resources.php  support.html  support.php
src/C/: README  doinstall  make_release
src/C/autotools/: Makefile.am  chealpix.c  chealpix.h  configure.ac  test_chealpix.c
src/C/subs/: Makefile  ang2pix_nest.c  ang2pix_ring.c  ang2vec.c  chealpix.c  chealpix.h  get_fits_size.c  my_test.c  nest2ring.c  npix2nside.c  nside2npix.c  pix2ang_nest.c  pix2ang_ring.c  pix2vec_nest.c  pix2vec_ring.c  printerror.c  read_healpix_map.c  ring2nest.c  test_chealpix.c  test_chealpix.pro  test_chealpix2.c  test_cio.c  vec2ang.c  vec2pix_nest.c  vec2pix_ring.c  write_healpix_map.c
src/common_libraries/libsharp/: .gitignore  COMPILE  INSTALL  Makefile.am  README.md  configure.ac  runtest.sh
src/common_libraries/libsharp/c_utils/: c_utils.c  memusage.c  memusage.h  walltime_c.c  walltime_c.h
src/common_libraries/libsharp/libsharp/: sharp.c  sharp.h  sharp_almhelpers.c  sharp_almhelpers.h  sharp_core.c  sharp_core_inc.c  sharp_cxx.h  sharp_geomhelpers.c  sharp_geomhelpers.h  sharp_internal.h  sharp_legendre_roots.c  sharp_legendre_roots.h  sharp_mpi.c  sharp_mpi.h  sharp_testsuite.c  sharp_vecsupport.h  sharp_ylmgen_c.c  sharp_ylmgen_c.h
src/common_libraries/libsharp/pocketfft/: LICENSE.md  pocketfft.c  pocketfft.h
src/cxx/: CHANGES  Makefile  Makefile.am  NEWS  README.compilation  configure.ac  make_release  run_config
src/cxx/Healpix_cxx/: Healpix_cxx.dox  alice3.cc  alice3.h  alice3_main.cc  alm.h  alm2map_cxx_module.cc  alm_fitsio.cc  alm_fitsio.h  alm_healpix_tools.cc  alm_healpix_tools.h  alm_powspec_tools.cc  alm_powspec_tools.h  anafast_cxx.par.txt  anafast_cxx_module.cc  calc_powspec_module.cc  compute_weights_module.cc  healpix_base.cc  healpix_base.h  healpix_base2.cc  healpix_base2.h  healpix_data_io.cc  healpix_data_io.h  healpix_map.cc  healpix_map.h  healpix_map_fitsio.cc  healpix_map_fitsio.h  healpix_tables.cc  healpix_tables.h  hotspots_cxx_module.cc  hpxtest.cc  map2tga_module.cc  median_filter_cxx_module.cc  moc.h  moc_fitsio.cc  moc_fitsio.h  moc_query.cc  moc_query.h  mult_alm_module.cc  needlet_tool.par.txt  needlet_tool_module.cc  (+11 more)
src/cxx/alice/: HealpixSkyMap.h  MollweideSkyMap.cc  PolarizationHolder.h  SkyMap.h  TextureHolder.h  alice2.cc  alice3.cc  alice3_usage.txt  alice_test.cc  alice_utils.h  generateTexture.cc  planck.make  testMollweideSkyMap.cc  testOrthogonalSkyMap.cc  testSoSSkyMap.cc
src/cxx/autotools/: Makefile.am  configure.ac  make_release  pocketfft
src/cxx/c_utils/: c_utils.h  planck.make  trig_utils.c  trig_utils.h  walltime_c.c  walltime_c.h
src/cxx/config/: config.auto.in  config.basic_gcc  config.generic_gcc  config.healpy  config.healpy_osx  config.linux_icc  config.optimized_gcc  config.osx  config.osx_icc  rules.common
src/cxx/cxxsupport/: announce.cc  announce.h  arr.h  compress_utils.h  crangeset.h  cxxutils.cc  datatypes.h  fftpack_support.h  fitshandle.cc  geom_utils.cc  levels_facilities.h  ls_image.cc  ls_image.h  math_utils.h  paramfile.cc  paramfile.h  planck.make  rangeset.h  safe_ptr.h  sse_utils_cxx.h  string_utils.h  walltimer.cc  walltimer.h  wigner.cc  xcomplex.h
src/cxx/docsrc/: Healpix_cxx.dox  c_utils.dox  cxxsupport.dox  index_code.html  libfftpack.dox  libpsht.dox  libsharp.dox  planck.make
src/cxx/libcfitsio/: planck.make
src/cxx/libfftpack/: bluestein.c  ls_fft.c  ls_fft.h
src/cxx/libpsht/: planck.make  (+7 more)
src/idl/: HEALPix_startup  README.txt
src/java/: .classpath  .project  CHANGES  README  SuggestedIdeas.txt  build.xml  build2.xml  make_release  old_issues_dpac_mantis_projectId_60.txt
src/python/: change_polcconv.py
test/: README  alm.fits  almdec.fits  alt.par  ana.par  ana2maps.par  ana_cut.par  ana_w2.par  cl.fits  cl2maps.fits  cl_old.fits  cl_out.fits  cl_planck1.fits  cl_planck2.fits  cl_planck3.fits  cl_w2.fits  cl_wmap1.fits  cl_wmap5.fits  cl_wmap7.fits  distmask.fits  hot.par  map.fits  map_LOres.fits  map_ext.fits  map_mf.fits  map_ngfs.fits  map_sm.fits  mask.fits  max.asc  med.par  min.asc  ngfs.par  planck2013ext_lcdm_cl_v1.fits  planck2015_lcdm_cl_v2.fits  planck2018_lcdm_cl_v3.fits  prmask.par  smo.par  syn.par  udg.par  wmap_lcdm_sz_lens_wmap5_cl_v3.fits  (+1 more)
(+696 files in other folders)
